--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,6 +14,11 @@
  *= require_self
 */
 
+
+
+
+
+/*********** new css *********************/
  @import "font-awesome.css";
  @import url("https://fonts.googleapis.com/css?family=Raleway:200,300,400,500,600");
  /*
