--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
     <%= render 'layouts/layout/footer' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'boomerang.min', 'data-turbolinks-track': 'reload' %>
-      
+
 
     <%= javascript_include_tag 'slidebar/slidebar.js', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'classie.js', 'data-turbolinks-track': 'reload' %>
@@ -51,14 +51,14 @@
     <%= javascript_include_tag 'vendor/wow/wow.min.js', 'data-turbolinks-track': 'reload' %>
 
     <%= javascript_include_tag 'vendor/isotope/isotope.min.js', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'vendor/imagesloaded/imagesloaded.pkgd.min.js', 'data-turbolinks-track': 'reload' %> %>
+    <%= javascript_include_tag 'vendor/imagesloaded/imagesloaded.pkgd.min.js', 'data-turbolinks-track': 'reload' %>
 
 
     <!-- App JS -->
     <%= javascript_include_tag 'boomerang.min.js', 'data-turbolinks-track': 'reload' %>
-    <p>
+    
     <script type="text/javascript" src="//downloads.mailchimp.com/js/signup-forms/popup/embed.js" data-dojo-config="usePlainJson: true, isDebug: false"></script><script type="text/javascript">require(["mojo/signup-forms/Loader"], function(L) { L.start({"baseUrl":"mc.us18.list-manage.com","uuid":"b6bb9b2b27c2dcf47afcc216c","lid":"9fb0e97ee6"}) })</script>
-    </p>
+
 
   </body>
 </html>
