--- a/app/views/layouts/layout/_footer.html.erb
+++ b/app/views/layouts/layout/_footer.html.erb
@@ -7,7 +7,7 @@
                         <div class="copyright">
                             <ul class="copy-links no-margin">
                                 <li>
-                                    &copy; 2018 Webpixels
+                                    &copy; 2018, Made with ❤️ in France.
                                 </li>
                             </ul>
                         </div>
@@ -18,20 +18,15 @@
                     <div class="text-center">
                         <ul class="footer-menu footer-menu-sm">
                             <li>
-                                <a href="https://webpixels.io" target="_blank" style="padding-left: 0;">Official website</a>
+                                <a href="https://thehackingproject.org" target="_blank">The hacking project</a>
                             </li>
                             <li>
-                                <a href="https://instagram.com/webpixels.io" target="_blank" style="padding-left: 0;">Instagram</a>
+                                <a href="https://LinkedIn.com" target="_blank">LinkedIn</a>
                             </li>
                             <li>
-                                <a href="https://facebook.com/webpixels" target="_blank" style="padding-left: 0;">Facebook</a>
+                                <a href="https://facebook.com/" target="_blank">Facebook</a>
                             </li>
-                            <li>
-                                <a href="http://support.wrapbootstrap.com/knowledge_base/topics/usage-licenses" target="_blank">License</a>
-                            </li>
-                            <li>
-                                <a href="https://goo.gl/9BbH7R" target="_blank">Buy now</a>
-                            </li>
+
                         </ul>
                     </div>
                 </div>
