--- a/app/views/static/etudiant.html.erb
+++ b/app/views/static/etudiant.html.erb
@@ -1,21 +1,17 @@
 <section class="background-image-holder">
-        <div class="holder-item has-bg-cover bg-size-cover" style="background-image: url(assets/images/backgrounds/slider/img-41.jpg); background-position: left center;">
+        <div class="holder-item has-bg-cover bg-size-cover">
             <span class="mask bg-base-1 alpha-7"></span>
             <div class="container slice-lg slice--offset-top">
                 <div class="row cols-xs-space align-items-center text-center text-md-left justify-content-center">
                     <div class="col-lg-7">
                         <div class="text-center mt-5">
-                            <img src="assets/images/logo/icon.png" style="width: 200px;" class="img-fluid">
                             <h2 class="heading display-3 font-weight-400 text-white mt-4 mb-0">
-                                <span class="font-weight-700">Boomerang</span>
+                                <span class="font-weight-700">The hacking project</span>
                             </h2>
 							<h2 class="heading heading-3 font-weight-400 text-white">
-                                <span class="font-weight-700">Multipurpose Bootstrap Theme</span>
+                                <span class="font-weight-700">The Hacking Project est une jeune pousse qui souhaite apporter à tous les compétences necessaires pour le monde de demain.</span>
                             </h2>
-                            <p class="text-lg text-white mt-3 lh-180 c-white mt-4">
-                                Boomerang is an innovative HTML template solution based on Bootstrap 4 built with modular components that makes it reusable and easy to work on.
-                            </p>
-							<a href="#" class="btn btn-styled btn-white btn-circle mt-4" data-scroll-to="#scroll_section">Start exploring</a>
+
                         </div>
                     </div>
                 </div>
@@ -23,17 +19,18 @@
         </div>
     </section>
 
-<<<<<<< HEAD
+
+
     <section class="slice sct-color-1">
         <div class="container">
             <div class="row cols-xs-space cols-sm-space cols-md-space align-items-center">
                 <div class="col-lg-5">
-                    <small class="heading heading-sm strong-300 text-uppercase ls-2 c-gray-light">Theme Styles</small>
+                    <small class="heading heading-sm strong-300 text-uppercase ls-2 c-gray-light">L'ecole de demain</small>
                     <h2 class="heading heading-4 line-height-1_6 strong-500 mt-3">
-                        You can now choose the theme's style: light or dark. By changing a single line of code you get an entirely new website.
+                      formations se déroulent du lundi au vendredi de 9h à 20h pendant 2 mois 1/2. Chez nous, pas de professeurs, pas de locaux.
                     </h2>
 
-                    <a href="documentation/customization/theme-style.html" class="mt-4">See the Docs</a>
+                    <a href="http://thehackingproject.org" class="mt-4">Plus d'info</a>
                 </div>
                 <div class="col-lg-7">
                     <div class="row mt-5 mt-lg-0 cols-xs-space cols-sm-space cols-md-space">
@@ -42,7 +39,10 @@
                                 <div class="block-image">
                                     <div class="view view-first">
                                         <a href="documentation/customization/theme-style.html">
-                                            <img src="assets/images/presentation/theme-light.jpg" class="img-fluid rounded z-depth-3">
+                                          <span class="img-fluid rounded">
+                                          <%=image_tag("about-us-wide-1.jpg") %>
+                                        </span>
+
                                         </a>
                                     </div>
                                 </div>
@@ -52,8 +52,10 @@
                             <div class="block block-image-holder z-depth-3">
                                 <div class="block-image">
                                     <div class="view view-first">
-                                        <a href="documentation/customization/theme-style.html">
-                                            <img src="assets/images/presentation/theme-dark.jpg" class="img-fluid rounded">
+                                        <a href="#">
+                                          <span class="img-fluid rounded">
+                                          <%=image_tag("img-5.jpg") %>
+                                        </span>
                                         </a>
                                     </div>
                                 </div>
@@ -64,14 +66,13 @@
             </div>
         </div>
     </section>
-=======
->>>>>>> 9f098d27fe79090364fead8d157e7730ade6b595
+
 
     <section class="slice sct-color-1">
         <div class="container sct-inner">
             <div class="section-title section-title--style-1 text-center mb-3">
                 <h3 class="section-title-inner heading-2 strong-600 text-normal">
-                    <span>Over 200 ready to use layouts</span>
+                    <span>TÉMOIGNAGES</span>
                 </h3>
                 <span class="section-title-delimiter clearfix d-none"></span>
             </div>
@@ -79,8 +80,7 @@
             <span class="clearfix"></span>
 
             <div class="fluid-paragraph fluid-paragraph-sm c-gray-light strong-300 text-center">
-                Everything you need in one package. Blog, portfolio, e-commerce, real estate and plenty of secondary pages that are responsive and optimized
-                based on user experience.
+                Nous préférons laisser nos corsaires parler à notre place.
             </div>
 
             <span class="space-xs-lg"></span>
@@ -96,12 +96,9 @@
                                     </div>
                                     <div class="block-content">
                                         <h3 class="heading heading-4 strong-400 text-capitalize">
-                                            Homepages
+                                            Pablo Community Manager - Ignition Program
                                         </h3>
-                                        <p class="">
-                                            Build anything from classic, minimlist to modern page designs.
-                                        </p>
-                                        <a href="pages-home.html" class="link link-xs link--style-2 text-uppercase strong-600 mt-3"">See pages</a>
+                                        <p class="">J'ai fait The Hacking Project pour hacker mon process commercial et faire plus. C'était également pour moi un moyen d'avoir une meilleure rémunération.</p>
                                     </div>
                                 </div>
                             </div>
@@ -117,12 +114,9 @@
                                     </div>
                                     <div class="block-content">
                                         <h3 class="heading heading-4 strong-600 text-capitalize">
-                                            Inner pages
+                                            Isabelle Bonnet CEO - AlgoSki
                                         </h3>
-                                        <p>
-                                            Page example for about, services, contact and much more.
-                                        </p>
-                                        <a href="pages-inner.html" class="link link-xs link--style-2 text-uppercase strong-600 mt-3">See pages</a>
+                                        <p>En plus de me donner suffisamment de bases en code pour lancer AlgoSki, The Hacking Project m'a réappris à apprendre. Je recommande la formation !</p>
                                     </div>
                                 </div>
                             </div>
@@ -138,12 +132,11 @@
                                     </div>
                                     <div class="block-content">
                                         <h3 class="heading heading-4 strong-600 text-capitalize">
-                                            Profile pages
+                                            Maxime Souillat - Développeur ruby - Studiomatic
                                         </h3>
                                         <p>
-                                            Need layouts for account and profile pages? We got you covered.
+                                          En deux mois, j'avais le niveau de développeur. Très pratique pour parler aux devs quand on fait du produit, ou pour tester à la volée plein de scripts rapides.
                                         </p>
-                                        <a href="pages-profile.html" class="link link-xs link--style-2 text-uppercase strong-600 mt-3">See pages</a>
                                     </div>
                                 </div>
                             </div>
@@ -151,168 +144,16 @@
                     </div>
                 </div>
 
-                <div class="row cols-xs-space cols-sm-space cols-md-space">
-                    <div class="col-12 col-lg-4">
-                        <div class="feature feature--boxed-border feature--boxed-border-light border">
-                            <div class="">
-                                <div class="icon-block icon-block--style-1-v5">
-                                    <div class="block-icon">
-                                        <i class="icon-basic-picture-multiple"></i>
-                                    </div>
-                                    <div class="block-content">
-                                        <h3 class="heading heading-4 strong-600 text-capitalize">
-                                            Blog pages
-                                        </h3>
-                                        <p>
-                                            Various blog page examples for any type of content.
-                                        </p>
-                                        <a href="pages-blog.html" class="link link-xs link--style-2 text-uppercase strong-600 mt-3">See pages</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
 
-                    <div class="col-12 col-lg-4">
-                        <div class="feature feature--boxed-border feature--boxed-border-light border">
-                            <div class="">
-                                <div class="icon-block icon-block--style-1-v5">
-                                    <div class="block-icon">
-                                        <i class="icon-real-estate-077"></i>
-                                    </div>
-                                    <div class="block-content">
-                                        <h3 class="heading heading-4 strong-600 text-capitalize">
-                                            Shop pages
-                                        </h3>
-                                        <p>
-                                            Four shop layouts with homepage and inner page examples.
-                                        </p>
-                                        <a href="pages-shop.html" class="link link-xs link--style-2 text-uppercase strong-600 mt-3">See pages</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
 
-                    <div class="col-12 col-lg-4">
-                        <div class="feature feature--boxed-border feature--boxed-border-light border">
-                            <div class="">
-                                <div class="icon-block icon-block--style-1-v5">
-                                    <div class="block-icon">
-                                        <i class="icon-basic-webpage-multiple"></i>
-                                    </div>
-                                    <div class="block-content">
-                                        <h3 class="heading heading-4 strong-600 text-capitalize">
-                                            Real Estate pages
-                                        </h3>
-                                        <p>
-                                            A few examples for listing real estate properties and not only.
-                                        </p>
-                                        <a href="pages-real-estate.html" class="link link-xs link--style-2 text-uppercase strong-600 mt-3">See pages</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
                 </div>
             </div>
         </div>
     </section>
 
-    <section class="slice-lg sct-color-1" id="sct_full_demos">
-        <div class="container">
-            <div class="section-title section-title--style-1 text-center mb-3">
-                <h3 class="section-title-inner heading-2 strong-600 text-normal">
-                    <span class="d-block">Startup demos for all</span>
-                </h3>
-                <span class="section-title-delimiter clearfix d-none"></span>
-            </div>
-            <span class="clearfix"></span>
-            <div class="fluid-paragraph text-center">
-                <p class="text-lg line-height-1_8 c-gray-light strong-300">
-                    Create your website using one of the demos below. Our demo's components are modular and interchangable, meaning you can take an element or a page from one demo and use it another without any additional setup.
-                </p>
-            </div>
-            <span class="space-xs-xl"></span>
-            <div class="">
-                <div class="row">
-                                        <div class="col-md-6 startup agency">
-                        <div class="block block-image-holder mb-5 image-animate-wrapper">
-                            <div class="block-image image-animate--hover">
-                                <a href="demos/startup-agency" target="_blank">
-                                    <img src="assets/images/presentation/demos/startup/agency.jpg" class="rounded">
-                                </a>
-                            </div>
-                            <div class="card-body px-0">
-                                <div class="">
-                                    <a href="html/startup-agency" class="heading heading-4 strong-500" target="_blank">
-                                        Startup Agency                                    </a>
-                                    <p class="c-gray-light mt-2 d-none">
-                                        Flexible plugin that utilizes a handful of classes for easy toggle behavior.                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                                        <div class="col-md-6 startup app">
-                        <div class="block block-image-holder mb-5 image-animate-wrapper">
-                            <div class="block-image image-animate--hover">
-                                <a href="demos/startup-app" target="_blank">
-                                    <img src="assets/images/presentation/demos/startup/app.jpg" class="rounded">
-                                </a>
-                            </div>
 
-                            <div class="card-body px-0">
-                                <div class="">
-                                    <a href="html/startup-app" class="heading heading-4 strong-500" target="_blank">
-                                        Startup App                                    </a>
-                                    <p class="c-gray-light mt-2 d-none">
-                                        Flexible plugin that utilizes a handful of classes for easy toggle behavior.                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                                        <div class="col-md-6 startup app">
-                        <div class="block block-image-holder mb-5 image-animate-wrapper">
-                            <div class="block-image image-animate--hover">
-                                <a href="demos/startup-analitycs" target="_blank">
-                                    <img src="assets/images/presentation/demos/startup/analitycs.jpg" class="rounded">
-                                </a>
-                            </div>
 
-                            <div class="card-body px-0">
-                                <div class="">
-                                    <a href="html/startup-analitycs" class="heading heading-4 strong-500" target="_blank">
-                                        Startup Analitycs                                    </a>
-                                    <p class="c-gray-light mt-2 d-none">
-                                        Flexible plugin that utilizes a handful of classes for easy toggle behavior.                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                                        <div class="col-md-6 startup classic">
-                        <div class="block block-image-holder mb-5 image-animate-wrapper">
-                            <div class="block-image image-animate--hover">
-                                <a href="demos/startup-classic" target="_blank">
-                                    <img src="assets/images/presentation/demos/startup/classic.jpg" class="rounded">
-                                </a>
-                            </div>
-
-                            <div class="card-body px-0">
-                                <div class="">
-                                    <a href="html/startup-classic" class="heading heading-4 strong-500" target="_blank">
-                                        Startup Classic                                    </a>
-                                    <p class="c-gray-light mt-2 d-none">
-                                        Flexible plugin that utilizes a handful of classes for easy toggle behavior.                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                                    </div>
-            </div>
-        </div>
-    </section>
-
-    <section class="slice has-bg-cover bg-size-cover" style="background-image: url(assets/images/backgrounds/slider/img-36.jpg); background-position: center center;">
+    <section class="slice has-bg-cover bg-size-cover">
         <span class="mask mask-base-1--style-1"></span>
         <div class="container">
             <div class="row justify-content-center">
@@ -328,7 +169,6 @@
                         an intuitive HTML markup.
                     </p>
 
-                    <a href="documentation/getting-started/introduction.html" class="btn btn-styled btn-lg btn-white btn-circle mt-5" target="_blank">Open the Docs</a>
                 </div>
             </div>
         </div>
