--- a/app/views/layouts/layout/_header.html.erb
+++ b/app/views/layouts/layout/_header.html.erb
@@ -2,7 +2,7 @@
     <!-- Header -->
     <div class="header">
     <!-- Top Bar -->
-    
+
     <!-- Global Search -->
     <section id="sctGlobalSearch" class="global-search global-search-overlay">
     <div class="container">
@@ -27,9 +27,10 @@
         <div class="container navbar-container">
             <!-- Brand/Logo -->
                         <a class="navbar-brand" href="index.html">
-                <img src="assets/images/logo/logo-1-a.png" class="d-none d-lg-inline-block" alt="Boomerang">
-                <img src="assets/images/logo/logo-1-a.png" class="d-lg-none" alt="Boomerang">            </a>
-            
+                <img src="images/logo-1-a.png" class="d-none d-lg-inline-block" alt="Boomerang">
+                <img src="images/logo-1-a.png" class="d-lg-none" alt="Boomerang"></a>
+
+
             <div class="d-inline-block">
                 <!-- Navbar toggler  -->
                 <button class="navbar-toggler hamburger hamburger-js hamburger--spring" type="button" data-toggle="collapse" data-target="#navbar_main" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
@@ -56,12 +57,12 @@
     <ul class="navbar-nav">
         <li class="nav-item dropdown megamenu">
             <a class="nav-link" href="index.html">
-                Overview
+                The hacking project
             </a>
         </li>
         <li class="nav-item dropdown">
-            <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-               Pages
+            <a href="http://www.facebook.com" class="nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+               Facebook
             </a>
 
             <div class="dropdown-menu dropdown-menu-xl py-0 px-0 overflow--hidden" aria-labelledby="navbar_1_dropdown_1">
@@ -101,7 +102,7 @@
                             <div class="list-group-heading heading heading-6 mb-1">Real estate pages</div>
                             <p class="text-sm mb-0">Lorem ipsum dolor sit amet consectetur adipiscing eiusmod tempor</p>
                         </div>
-                    </a> 
+                    </a>
                 </div>
             </div>
         </li>
