--- a/app/views/static/reconver.html.erb
+++ b/app/views/static/reconver.html.erb
@@ -1,184 +1,168 @@
-<!-- Header -->
-    <header id="header">
-      <a class="logo" href="index.html">Industrious</a>
-      <nav>
-        <a href="#menu">Menu</a>
-      </nav>
-    </header>
+<section class="background-image-holder">
+        <div class="holder-item has-bg-cover bg-size-cover">
+            <span class="mask bg-base-1 alpha-7"></span>
+            <div class="container slice-lg slice--offset-top">
+                <div class="row cols-xs-space align-items-center text-center text-md-left justify-content-center">
+                    <div class="col-lg-7">
+                        <div class="text-center mt-5">
 
-  <!-- Nav -->
-    <nav id="menu">
-      <ul class="links">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="elements.html">Elements</a></li>
-        <li><a href="generic.html">Generic</a></li>
-      </ul>
-    </nav>
 
-  <!-- Banner -->
-    <section id="banner">
-      <div class="inner">
-        <h1>Industrious</h1>
-        <p>A responsive business oriented template with a video background<br />
-        designed by <a href="https://templated.co/">TEMPLATED</a> and released under the Creative Commons License.</p>
-      </div>
-      <video autoplay loop muted playsinline src="images/banner.mp4"></video>
-    </section>
 
-  <!-- Highlights -->
-    <section class="wrapper">
-      <div class="inner">
-        <header class="special">
-          <h2>Sem turpis amet semper</h2>
-          <p>In arcu accumsan arcu adipiscing accumsan orci ac. Felis id enim aliquet. Accumsan ac integer lobortis commodo ornare aliquet accumsan erat tempus amet porttitor.</p>
-        </header>
-        <div class="highlights">
-          <section>
-            <div class="content">
-              <header>
-                <a href="#" class="icon fa-vcard-o"><span class="label">Icon</span></a>
-                <h3>Feugiat consequat</h3>
-              </header>
-              <p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
-            </div>
-          </section>
-          <section>
-            <div class="content">
-              <header>
-                <a href="#" class="icon fa-files-o"><span class="label">Icon</span></a>
-                <h3>Ante sem integer</h3>
-              </header>
-              <p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
-            </div>
-          </section>
-          <section>
-            <div class="content">
-              <header>
-                <a href="#" class="icon fa-floppy-o"><span class="label">Icon</span></a>
-                <h3>Ipsum consequat</h3>
-              </header>
-              <p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
-            </div>
-          </section>
-          <section>
-            <div class="content">
-              <header>
-                <a href="#" class="icon fa-line-chart"><span class="label">Icon</span></a>
-                <h3>Interdum gravida</h3>
-              </header>
-              <p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
-            </div>
-          </section>
-          <section>
-            <div class="content">
-              <header>
-                <a href="#" class="icon fa-paper-plane-o"><span class="label">Icon</span></a>
-                <h3>Faucibus consequat</h3>
-              </header>
-              <p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
-            </div>
-          </section>
-          <section>
-            <div class="content">
-              <header>
-                <a href="#" class="icon fa-qrcode"><span class="label">Icon</span></a>
-                <h3>Accumsan viverra</h3>
-              </header>
-              <p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
-            </div>
-          </section>
-        </div>
-      </div>
-    </section>
+                            <h2 class="heading display-3 font-weight-400 text-white mt-4 mb-0">
+                                <span class="font-weight-700">Why the Code!</span>
+                            </h2>
+							<h2 class="heading heading-3 font-weight-400 text-white">
+                                <span class="font-weight-700">Bootcamp gratuit pour booster ses compétences. The Hacking Project, douze semaines en immersion dans l'univers du Ruby code. Se former en peer-learning pour les métiers de demain!</span>
+                            </h2>
+                            <p class="text-lg text-white mt-3 lh-180 c-white mt-4">
 
-  <!-- CTA -->
-    <section id="cta" class="wrapper">
-      <div class="inner">
-        <h2>Curabitur ullamcorper ultricies</h2>
-        <p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing. Lorem ipsum dolor vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing sed feugiat eu faucibus. Integer ac sed amet praesent. Nunc lacinia ante nunc ac gravida.</p>
-      </div>
-    </section>
-
-  <!-- Testimonials -->
-    <section class="wrapper">
-      <div class="inner">
-        <header class="special">
-          <h2>Faucibus consequat lorem</h2>
-          <p>In arcu accumsan arcu adipiscing accumsan orci ac. Felis id enim aliquet. Accumsan ac integer lobortis commodo ornare aliquet accumsan erat tempus amet porttitor.</p>
-        </header>
-        <div class="testimonials">
-          <section>
-            <div class="content">
-              <blockquote>
-                <p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
-              </blockquote>
-              <div class="author">
-                <div class="image">
-                  <img src="images/pic01.jpg" alt="" />
+                            </p>
+                        </div>
+                    </div>
                 </div>
-                <p class="credit">- <strong>Jane Doe</strong> <span>CEO - ABC Inc.</span></p>
-              </div>
             </div>
-          </section>
-          <section>
-            <div class="content">
-              <blockquote>
-                <p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
-              </blockquote>
-              <div class="author">
-                <div class="image">
-                  <img src="images/pic03.jpg" alt="" />
-                </div>
-                <p class="credit">- <strong>John Doe</strong> <span>CEO - ABC Inc.</span></p>
-              </div>
-            </div>
-          </section>
-          <section>
-            <div class="content">
-              <blockquote>
-                <p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
-              </blockquote>
-              <div class="author">
-                <div class="image">
-                  <img src="images/pic02.jpg" alt="" />
-                </div>
-                <p class="credit">- <strong>Janet Smith</strong> <span>CEO - ABC Inc.</span></p>
-              </div>
-            </div>
-          </section>
         </div>
-      </div>
     </section>
 
-  <!-- Footer -->
-    <footer id="footer">
-      <div class="inner">
-        <div class="content">
-          <section>
-            <h3>Accumsan montes viverra</h3>
-            <p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing. Lorem ipsum dolor vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing sed feugiat eu faucibus. Integer ac sed amet praesent. Nunc lacinia ante nunc ac gravida.</p>
-          </section>
-          <section>
-            <h4>Sem turpis amet semper</h4>
-            <ul class="alt">
-              <li><a href="#">Dolor pulvinar sed etiam.</a></li>
-              <li><a href="#">Etiam vel lorem sed amet.</a></li>
-              <li><a href="#">Felis enim feugiat viverra.</a></li>
-              <li><a href="#">Dolor pulvinar magna etiam.</a></li>
-            </ul>
-          </section>
-          <section>
-            <h4>Magna sed ipsum</h4>
-            <ul class="plain">
-              <li><a href="#"><i class="icon fa-twitter">&nbsp;</i>Twitter</a></li>
-              <li><a href="#"><i class="icon fa-facebook">&nbsp;</i>Facebook</a></li>
-              <li><a href="#"><i class="icon fa-instagram">&nbsp;</i>Instagram</a></li>
-              <li><a href="#"><i class="icon fa-github">&nbsp;</i>Github</a></li>
-            </ul>
-          </section>
+    <section class="slice sct-color-1">
+        <div class="container">
+            <div class="row cols-xs-space cols-sm-space cols-md-space align-items-center">
+                <div class="col-lg-5">
+                    <small class="heading heading-sm strong-300 text-uppercase ls-2 c-gray-light">DEMANDEURS D'EMPLOI</small>
+                    <h2 class="heading heading-4 line-height-1_6 strong-500 mt-3">
+                        <li>Relancer sa carrière</li>
+                        <li>Préparer sa digitale reconversion</li>
+                        <li>S'appuyer sur la communauté THP</li>
+                        <li>Apprendre en peer-learning</li>
+
+                    </h2>
+
+                    <a href="#" class="link link-xs link--style-2 text-uppercase strong-600 mt-3">Voir Plus</a>
+                </div>
+                <div class="col-lg-7">
+                    <div class="row mt-5 mt-lg-0 cols-xs-space cols-sm-space cols-md-space">
+                        <div class="col-lg-6">
+                            <div class="block block-image-holder z-depth-3">
+                                <div class="block-image">
+                                    <div class="view view-first">
+                                        <a href="#">
+                                          <span class=“img-fluid rounded”>
+                                            <%= image_tag('https://images.pexels.com/photos/7096/people-woman-coffee-meeting.jpg?auto=compress&cs=tinysrgb&h=350') %>
+                                          </span>
+                                        </a>
+                                    </div>
+                                  </div>
+                                </div>
+                            </div>
+                        </div>
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div class="copyright">
-          &copy; Untitled. Photos <a href="https://unsplash.co">Unsplash</a>, Video <a href="https://coverr.co">Coverr</a>.
+    </section>
+
+    <section class="slice sct-color-1">
+        <div class="container sct-inner">
+            <div class="section-title section-title--style-1 text-center mb-3">
+                <h3 class="section-title-inner heading-2 strong-600 text-normal">
+                    <span>TÉMOIGNAGES</span>
+                </h3>
+                <span class="section-title-delimiter clearfix d-none"></span>
+            </div>
+
+            <span class="clearfix"></span>
+
+            <div class="fluid-paragraph fluid-paragraph-sm c-gray-light strong-300 text-center">
+                The Hacking Project forme aux métiers de demain
+            </div>
+
+            <span class="space-xs-lg"></span>
+
+            <div class="row-wrapper">
+                <div class="row cols-xs-space cols-sm-space cols-md-space">
+                    <div class="col-12 col-lg-4">
+                        <div class="feature feature--boxed-border feature--boxed-border-light border">
+                            <div class="">
+                                <div class="icon-block icon-block--style-1-v5">
+                                    <div class="block-icon">
+                                        <i class="icon-real-estate-001"></i>
+                                    </div>
+                                    <div class="block-content">
+
+                                        <h3 class="heading heading-4 strong-600 text-capitalize">
+                                            John Doe
+                                            <p>Directeur Marketing</p>
+                                        </h3>
+                                        <p class="">
+                                            A l'heure du numérique impossible de faire l'impasse sur le programming. Aujourd'hui, après douze semaines intensives, je suis à niveau pour poursuivre ma carrière et m'ouvrir à de nouvelles opportunités.
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-12 col-lg-4">
+                        <div class="feature feature--boxed-border feature--boxed-border-light border">
+                            <div class="">
+                                <div class="icon-block icon-block--style-1-v5">
+                                    <div class="block-icon">
+                                        <i class="icon-ecommerce-cart-plus"></i>
+                                    </div>
+                                    <div class="block-content">
+                                        <h3 class="heading heading-4 strong-600 text-capitalize">
+                                            Alicia Pedro
+                                          </h3>
+                                            <p>Auto-entrepreneur</p>
+
+                                        <p class="">
+                                          Me former à Ruby, m'a permis de créer mon application et de collecter des informations stratégiques liées à mon activité professionnelles.
+                                        </p>
+                                        <br>
+
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-12 col-lg-4">
+                        <div class="feature feature--boxed-border feature--boxed-border-light border">
+                            <div class="">
+                                <div class="icon-block icon-block--style-1-v5">
+                                    <div class="block-icon">
+                                        <i class="icon-basic-book-pencil"></i>
+                                    </div>
+                                    <div class="block-content">
+                                        <h3 class="heading heading-4 strong-600">
+                                            Ben Lee
+                                            <p>Directeur de Production</p>
+                                        </h3>
+                                        <p>
+                                          Sans la formation THP, je me sentais dépassé et en difficulté pour retrouver un travail. Chômeur de longue durée, j'appartiens aujourd'hui à une communauté et j'ai retrouvé confiance en moi.
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    </div>
+                </div>
+            </div>
         </div>
-      </div>
-    </footer>
+    </section>
+                </div>
+            </div>
+        </div>
+    </section>
