--- a/app/views/static/etudiant.html.erb
+++ b/app/views/static/etudiant.html.erb
@@ -40,7 +40,7 @@
                                     <div class="view view-first">
                                         <a href="documentation/customization/theme-style.html">
                                           <span class="img-fluid rounded">
-                                          <%=image_tag("about-us-wide-1.jpg") %>
+                                          <%=image_tag("https://scontent-cdg2-1.xx.fbcdn.net/v/t1.0-0/p600x600/32763731_272475223294208_5723218851642998784_o.jpg?_nc_cat=0&oh=fc5189ee1eaf0c91b721f45fd6b83103&oe=5B8A4A2F") %>
                                         </span>
 
                                         </a>
@@ -48,19 +48,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-6">
-                            <div class="block block-image-holder z-depth-3">
-                                <div class="block-image">
-                                    <div class="view view-first">
-                                        <a href="#">
-                                          <span class="img-fluid rounded">
-                                          <%=image_tag("img-5.jpg") %>
-                                        </span>
-                                        </a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+                    
                     </div>
                 </div>
             </div>
@@ -145,29 +133,6 @@
                 </div>
 
 
-
-                </div>
-            </div>
-        </div>
-    </section>
-
-
-
-    <section class="slice has-bg-cover bg-size-cover">
-        <span class="mask mask-base-1--style-1"></span>
-        <div class="container">
-            <div class="row justify-content-center">
-                <div class="col-md-7 text-center">
-                    <h2 class="heading heading-1 strong-600 c-white mb-5">
-                        Documentation and Shortcodes
-                    </h2>
-
-                    <p class="lead line-height-1_8 c-white">
-                        Get started fast and easy with Boomerang using the documentation and shortcode examples. No matter
-                        you are a developer or new to web design, you will
-                        find our theme very easy to customize with
-                        an intuitive HTML markup.
-                    </p>
 
                 </div>
             </div>
