--- a/app/views/layouts/layout/_footer.html.erb
+++ b/app/views/layouts/layout/_footer.html.erb
@@ -35,20 +35,16 @@
                     <div class="text-center text-lg-right">
                         <ul class="social-media social-media--style-1-v4">
                             <li>
-                                <a href="https://www.facebook.com/webpixels/" class="facebook" target="_blank" data-toggle="tooltip" data-original-title="Facebook">
+                                <a href="https://www.facebook.com/thehackingproject/" class="facebook" target="_blank" data-toggle="tooltip" data-original-title="Facebook">
                                     <i class="fa fa-facebook"></i>
                                 </a>
                             </li>
                             <li>
-                                <a href="https://www.instagram.com/webpixels.io/" class="instagram" target="_blank" data-toggle="tooltip" data-original-title="Instagram">
-                                    <i class="fa fa-instagram"></i>
+                                <a href="https://www.linkedin.com/school/the_hacking_project/" class="Linkedin" target="_blank" data-toggle="tooltip" data-original-title="LinkedIn">
+                                    <i class="fa fa-linkedin"></i>
                                 </a>
                             </li>
-                            <li>
-                                <a href="https://dribbble.com/webpixels" class="dribbble" target="_blank" data-toggle="tooltip" data-original-title="Dribbble">
-                                    <i class="fa fa-dribbble"></i>
-                                </a>
-                            </li>
+                  
                         </ul>
                     </div>
                 </div>
