--- a/app/views/static/reconver.html.erb
+++ b/app/views/static/reconver.html.erb
@@ -1,7 +1,5 @@
-<<<<<<< HEAD
-=======
 <section class="background-image-holder">
-        <div class="holder-item has-bg-cover bg-size-cover">
+        <div class="holder-item has-bg-cover bg-size-cover bgimgreco">
             <span class="mask bg-base-1 alpha-7"></span>
             <div class="container slice-lg slice--offset-top">
                 <div class="row cols-xs-space align-items-center text-center text-md-left justify-content-center">
@@ -168,4 +166,3 @@
             </div>
         </div>
     </section>
->>>>>>> 9095fc4299127bf93bd5882e48410c7154cdee48
