--- a/app/views/layouts/layout/_header.html.erb
+++ b/app/views/layouts/layout/_header.html.erb
@@ -16,7 +16,7 @@
     <nav class="navbar navbar-expand-lg navbar--bold  navbar-transparent navbar-inverse bg-dark  ">
         <div class="container navbar-container">
             <!-- Brand/Logo -->
-              <a class="navbar-brand" href="#">
+              <a href="#" class="logo">
                 <img src="https://www.thehackingproject.org/assets/thp-logo-5f2f06c9444205a88123ca1de74646970e5a1dfb03698d02db33e5e62a60d6cd.png" class="d-none d-lg-inline-block" alt="logo" style="width: 50px; border-radius: 5px;">
                 <img src="https://www.thehackingproject.org/assets/thp-logo-5f2f06c9444205a88123ca1de74646970e5a1dfb03698d02db33e5e62a60d6cd.png" class="d-lg-none" alt="logo" style="width: 50px; border-radius: 5px;">
               </a>
